# Playground-Linux

./: README.md
LTTng/QuickStart/: script
LTTng/QuickStart/Example/: CMakeCache.txt  CMakeLists.txt  LTTngTest  Makefile  TPprovider.cc  TPprovider.h  app  application.cpp  cmake_install.cmake
LTTng/QuickStart/UserSpaceTrace/: hello  hello-tp.h
flatpak/: org.flatpak.Hello.yml
flatpak/build-dir/: metadata
flatpak/build-dir/files/: manifest.json
glib/: README.md
glib/gobject/: README.md  animalcat.c  animalcat.h  animaltiger.c  animaltiger.h  g-ir-cpp-myb2k5yi.c  main.c
gnome/autostart-sm/: example.c
inotify/: .intoify.cpp.swp  intoify.cpp
shared_memory/: pshm_ucase.h  pshm_ucase_bounce.c  pshm_ucase_send.c
so_injector/: a.out  main.cpp  mylib.cpp
virtualization/namespace/: a.out  client  pid_namespace.cpp  testclient.cpp  testservice.cpp
xlib/: README.md  anotherexample.c  example.c
xlib/xi2/: test.c
